--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build and push docker image
       uses: docker/build-push-action@v5
       with:
-        context: backend/
+        context: .
         push: true
         tags: gravehg/github-homework-12-aseguramiento:latest
   
